--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2208,6 +2208,52 @@ interface AudioParam {
         <br>
         <dd>반환 유형: AudioParam</dd>
         <br>
+        <dt><i>setTargetAtTime(target, startTime, timeConstant)</i></dt>
+        <dd>주어진 시간 상수를 가지는 비율로 주어진 시간에 목표 값으로의 지수적 접근을 시작합니다. 다른 사용 가운데서, 이것은 ADSR 엔벨로프의 "decay"와 "release" 부분을 구현하는 데 유용합니다. 파라미터 값이 주어진 시간에 목표 값으로 즉시 변화하지 않고, 대신 목표 값으로 서서히 변화한다는 점에 주의하십시오.</dd>
+        <br>
+        <dd>시간 구간 T<sub>0</sub>= t 동안 (T<sub>0</sub>은 startTime 매개변수)</dd>
+        <br>
+        <dd>v(t)=V<sub>1</sub>+(V<sub>0</sub>-V<sub>1</sub>)e^(-(t-T<sub>0</sub>)/τ)</dd>
+        <br>
+        <dd>여기서 V<sub>0</sub>은 T<sub>0</sub>(startTime 매개변수)에서의 초기값([[current value]] 어트리뷰트)이고, V<sub>1</sub>은 target 매개변수와 같으며, τ는 timeConstant 매개변수입니다.</dd>
+        <br>
+        <dd>만약 LinearRampToValue나 ExponentialRampToValue 이벤트가 이 이벤트의 뒤라면, 동작은 linearRampToValueAtTime() 또는 ExponentialRampToVAlueAtTime()에 각각 기술되어 있습니다. 다른 모든 이벤트에 대해서, SetTarget 이벤트는 다음 이벤트의 시간에 끝납니다.</dd>
+        <br>
+        <dd>
+          <table>
+            <caption>AudioParam.SetTargetAtTime() 메서드의 인자</caption>
+            <tr>
+              <td>매개변수</td>
+              <td>자료형</td>
+              <td>nullable</td>
+              <td>optional</td>
+              <td>설명</td>
+            </tr>
+            <tr>
+              <td>target</td>
+              <td>float</td>
+              <td>x</td>
+              <td>x</td>
+              <td>주어진 시간에 파라미터가 변화를 <i>시작할</i> 값</td>
+            </tr>
+            <tr>
+              <td>startTime</td>
+              <td>double</td>
+              <td>x</td>
+              <td>x</td>
+              <td>지수적 접근이 시작될 시간이며, AudioContext의 currentTime 어트리뷰트와 같은 시간 좌표계에 있음. ⌛ 만약 start가 음수거나 유한한 수가 아니라면, RangeError 예외가 반드시 발생되어야만 합니다. 만약 startTime이 currentTime보다 작다면, currentTime으로 clamp됩니다.</td>
+            </tr>
+            <tr>
+              <td>timeConstant</td>
+              <td>float</td>
+              <td>x</td>
+              <td>x</td>
+              <td>목표 값으로의 first-order 필터 (지수적) 접근의 시간-상수 값. 이 값이 클수록, 전이는 더 느려질 것입니다. ⌛ 이 값은 반드시 음수가 아니여야만 하고 그렇지 않다면 RangeError 예외가 반드시 발생되어야만 합니다. 만약 timeConstant가 0이라면, 출력값은 즉시 마지막 값으로 뜁니다. 더욱 정밀하게는, <i>timeConstant</i>는 계단 입력 응답 (0에서 1 값으로의 전이) 이 주어졌을 때 first-order 선형 연속 시불변 시스템이 값 1-1/e (약 63.2%) 에 도달하는 데 걸리는 시간입니다.</td>
+            </tr>
+          </table>
+        </dd>
+        <br>
+        <dd>반환 유형: AudioParam</dd>
         </dl>
         <br>
         <h3>1.6.3. 값의 계산</h3>
