--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2297,6 +2297,54 @@ interface AudioParam {
           <br>
           <dd>반환 유형: AudioParam</dd>
           <br>
+          <dt><i>setValueCurveAtTime(values, startTime, duration)</i></dt>
+          <dd>주어진 기간 동안 주어진 시간에서 시작하는 임의의 파라미터 값들의 배열을 설정합니다. 값들의 개수는 희망되는 기간에 맞도록 스케일링될 것입니다.</dd>
+          <br>
+          <dd>T<sub>0</sub>을 startTime, T<sub>D</sub>을 duration, V를 values 배열, N을 values 배열의 길이라고 합시다. 그렇다면, 시간 구간 T&lt;=0t&lt;T<sub>0</sub>+T<sub>D</sub>동안,</dd>
+          <br>
+          <dd>k=floor((N-1)(t-T<sub>0</sub>)/T<sub>D</sub>)</dd>
+          <br>
+          <dd>그리고서 v(t)는 V[k]와 V[k+1] 사이를 선형적으로 보간함으로써 계산됩니다.</dd>
+          <br>
+          <dd>curve 시간 구간 (t&gt;=T<sub>0</sub>+T<sub>D</sub>)의 끝 이후에, (만약 있다면) 또 다른 자동화 이벤트가 있을 때까지, 값은 마지막 curve 값에서 변하지 않고 유지될 것입니다.</dd>
+          <br>
+          <dd>setValueAtTime()의 암시적 호출은 값 V[N-1]을 가지고서 시간 T<sub>0</sub>+T<sub>D</sub>에서 만들어져 이어지는 자동화가 setValueCurveAtTime() 이벤트의 끝에서 시작되도록 합니다.</dd>
+          <br>
+          <dd>
+            <table>
+              <caption>AudioParam.setValueCurveAtTime() 메서드의 인자</caption>
+              <tr>
+                <td>매개변수</td>
+                <td>자료형</td>
+                <td>nullable</td>
+                <td>optional</td>
+                <td>설명</td>
+              </tr>
+              <tr>
+                <td>values</td>
+                <td>sequence&lt;float&gt;</td>
+                <td>x</td>
+                <td>x</td>
+                <td>파라미터 값 curve를 나타내는 float 값들의 sequence. 이 값들은 주어진 시간에 시작해 주어진 기간 동안 지속되도록 적용될 것입니다. 이 메서드가 호출되었을 때, 이 curve의 내부적 복제본이 자동화 목적을 위해 생성됩니다. 그러므로 전달된 배열의 내용의 차후의 수정은 AudioParam에 영향을 미치지 않습니다. ⌛ 만약 이 어트리뷰트가 2보다 작은 길이를 가지는 sequence&lt;float&gt; 객체라면 InvalidStateError가 반드시 발생되어야만 합니다.</td>
+              </tr>
+              <tr>
+                <td>startTime</td>
+                <td>double</td>
+                <td>x</td>
+                <td>x</td>
+                <td>값 curve가 적용될 시작 시간이며 AudioContext의 currentTime 어트리뷰트와 같은 시간 좌표계에 있음. ⌛ 만약 startTime이 음수거나 유한한 수가 아니라면 RangeError 예외가 반드시 발생되어야만 합니다. 만약 startTime이 currentTime보다 작다면, currentTime으로 clamp됩니다.</td>
+              </tr>
+              <tr>
+                <td>duration</td>
+                <td>double</td>
+                <td>x</td>
+                <td>x</td>
+                <td>값들이 values 매개변수에 따라 계산될 (startTime 매개변수 이후의) 시간의 양이며 단위는 초. ⌛ 만약 duration이 엄격하게 양수가 아니거나 유한한 수가 아니라면 RangeError 예외가 반드시 발생되어야만 합니다.</td>
+              </tr>
+            </table>
+          </dd>
+          <br>
+          <dd>반환 유형: AudioParam</dd>
         </dl>
         <br>
         <h3>1.6.3. 값의 계산</h3>
