--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2652,12 +2652,47 @@ interface AnalyserNode : AudioNode {
           <dt><i>minDecibels</i> / 자료형: double</dt>
           <dd>부호없는 바이트 값으로의 전환을 위해 FFT 분석 데이터의 스케일링 범위에서의 최소 파워 값. 기본값은 -100입니다. ⌛ 만약 이 어트리뷰트의 값이 maxDecibels와 같거나 큰 값으로 설정되었다면, IndexSizeError 예외가 반드시 발생되어야만 합니다.</dd>
           <br>
-          <dt><i>smoothingTimeConstant</i></dt>
+          <dt><i>smoothingTimeConstant</i> / 자료형: double</dt>
           <dd>0에서 1까지의 값으로 0은 마지막 분석 프레임에서의 time averaging이 없음을 나타냅니다. 기본값은 0.8입니다. ⌛ 만약 이 어트리뷰트의 값이 0보다 작거나 1보다 큰 값으로 설정된다면, IndexSizeError 예외가 반드시 발생되어야만 합니다.</dd>
           <br>
         </dl>
         <br>
         <h3>1.8.3. 메서드</h3>
+        <br>
+        <dl>
+          <dt><i>getByteFrequencyData(array)</i></dt>
+          <dd>인자로서 전달된 Uint8Array에 의해 소유되는 reference to the bytes를 얻습니다. 현재 주파수 데이터를 이 bytes에 복제합니다. 만약 배열이 frequencyBinCount보다 적은 원소를 가지고 있다면, 초과되는 원소는 탈락됩니다. 만약 배열이 FrequencyBinCount보다 많은 원소를 가지고 있다면, 초과되는 원소는 무시됩니다. 가장 최근의 fftSize 프레임이 주파수 데이터를 계산하는 데 사용됩니다.</dd>
+          <br>
+          <dd>만약 또 다른 getByteFrequencyData()나 getFloatFrequencyData() 호출이 이전과 동일한 render quantum 내에서 발생한다면, 현재 주파수 데이터는 같은 데이터에 의해 갱신되지 않습니다. 대신, 이전에 계산된 데이터가 반환됩니다.</dd>
+          <br>
+          <dd>unsigned byte array에 저장된 값들은 다음의 방법으로 계산됩니다. Y[k]를 FFT windowing and smoothing에서 기술되는 현재 주파수 데이터라고 합시다. 그렇다면 바이트 값 b[k]는 다음과 같습니다.</dd>
+          <br>
+          <dd>b[k] = Math.floor(255 * (Y[k] - dB<sub>min</sub>) / (dB<sub>max</sub> - dB<sub>min</sub>))</dd>
+          <br>
+          <dd>여기서 dB<sub>min</sub>는 minDecibels이고 dB<sub>max</sub>는 maxDecibels입니다. 만약 b[k]가 0에서 255 범위 바깥에 있다면, b[k]는 이 범위 안에 들도록 clip됩니다.</dd>
+          <br>
+          <dd>
+            <table>
+              <caption>AnalyserNode.getByteFrequencyData() 메서드의 인자</caption>
+              <tr>
+                <td>매개변수</td>
+                <td>자료형</td>
+                <td>nullable</td>
+                <td>optional</td>
+                <td>설명</td>
+              </tr>
+              <tr>
+                <td>array</td>
+                <td>Uint8Array</td>
+                <td>x</td>
+                <td>x</td>
+                <td>이 매개변수는 주파수 도메인 분석 데이터가 복제될 곳입니다.</td>
+              </tr>
+            </table>
+          </dd>
+          <br>
+        </dl>
+        <br>
         <h3>1.8.4. AnalyserOptions</h3>
         <h4>1.8.4.1. 딕셔너리 AnalyserOptions 멤버</h4>
         <h3>1.8.5. 시간 영역 다운 믹싱</h3>
