--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2691,6 +2691,9 @@ interface AnalyserNode : AudioNode {
             </table>
           </dd>
           <br>
+          <dt><i>getByteTimeDomainData(array)</i></dt>
+          <dd>인자로서 전달된 Uint8Array에 의해 소유되는 reference to the bytes를 얻습니다. 현재 시간 도메인 데이터 (파형 데이터) 를 이 bytes에 복제합니다. 만약 배열이 fftSize의 값보다 적은 원소를 가지고 있다면, 초과되는 원소는 탈락될 것입니다. 만약 배열이 fftSize보다 많은 원소를 가지고 있다면, 초과되는 원소는 무시될 것입니다. 가장 최근의 fftSize 프레임이 바이트 데이터를 계산하는 데 사용됩니다.</dd>
+          <br>
         </dl>
         <br>
         <h3>1.8.4. AnalyserOptions</h3>
