--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -2791,6 +2791,21 @@ dictionary AnalyserOptions : AudioNodeOptions {
         </pre>
         <br>
         <h4>1.8.4.1. 딕셔너리 AnalyserOptions 멤버</h4>
+        <br>
+        <dl>
+          <dt><i>ffiSize</i> / 자료형: unsigned long / 기본값: 2048</dt>
+          <dd>주파수 도메인 분석을 위한 FFT의 원하는 초기 사이즈</dd>
+          <br>
+          <dt><i>maxDecibels</i> / 자료형: double / 기본값: -30</dt>
+          <dd>FFT 분석을 위한 원하는 초기 최대 파워 (단위: dB)</dd>
+          <br>
+          <dt><i>minDecibels</i> / 자료형: double / 기본값: -100</dt>
+          <dd>FFT 분석을 위한 원하는 초기 최소 파워 (단위: dB)</dd>
+          <br>
+          <dt><i>smoothingTimeConstant / 자료형: double / 기본값: 0.8</i></dt>
+          <dd>FFT 분석을 위한 원하는 초기 smoothing 상수</dd>
+        </dl>
+        <br>
         <h3>1.8.5. 시간 영역 다운 믹싱</h3>
         <p>현재 시간 영역 데이터가 계산될 때, 입력 신호는 반드시 마치 channelCount가 1이고, channelCountMode가 "max"이고, channelInterpretation이 "speakers"인 것처럼 모노로 다운믹스되어야만 합니다. 이것은 AnalyserNode 자체의 설정과는 무관합니다. 가장 최신의 fftSize 프레임이 다운믹싱 연산에 사용됩니다.</p>
         <br>
