--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3030,6 +3030,9 @@ interface AudioBufferSourceNode : AudioScheduledSourceNode {
             </table>
           </dd>
           <br>
+          <dt><i>loop</i> / 자료형: boolean</dt>
+          <dd>loopStart와 loopEnd에 의해 지정된 오디오 데이터 영역이 루프 내에서 계속 재생되어야 하는지를 나타냅니다. 기본값은 false입니다.</dd>
+          <br>
         </dl>
         <br>
         <h3>1.9.3. 메서드</h3>
