--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3074,6 +3074,14 @@ interface AudioBufferSourceNode : AudioScheduledSourceNode {
         </dl>
         <br>
         <h3>1.9.3. 메서드</h3>
+        <br>
+        <dl>
+          <dt><i>start(when, offset, duration)</i></dt>
+          <dd>사운드가 정확한 시간에 재생되도록 예정합니다.</dd>
+          <br>
+          <dd>⌛ 이 메서드가 호출되었을 때, 아래의 절차를 수행합니다.</dd>
+        </dl>
+        <br>
         <h3>1.9.4. AudioBufferSourceOptions</h3>
         <h4>1.9.4.1. 딕셔너리 AudioBufferSourceOptions 멤버</h4>
         <h3>1.9.5. 반복</h3>
