--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3079,7 +3079,29 @@ interface AudioBufferSourceNode : AudioScheduledSourceNode {
           <dt><i>start(when, offset, duration)</i></dt>
           <dd>사운드가 정확한 시간에 재생되도록 예정합니다.</dd>
           <br>
-          <dd>⌛ 이 메서드가 호출되었을 때, 아래의 절차를 수행합니다.</dd>
+          <dd>⌛ 이 메서드가 호출되었을 때, 아래의 절차를 수행합니다.
+            <ol>
+              <li>⌛ 만약 이 AudioBufferSourceNode의 내부 슬롯 [[source started]]가 true라면, InvalidStateError 예외가 반드시 발생되어야만 합니다.</li>
+              <li>아래에서 설명되는 parameter constraints에 기인해 반드시 발생되어야만 하는 오류에 대해서 확인합니다. 만약 이 과정에서 어떠한 오류라도 발생된다면, 이 과정들을 중단합니다.</li>
+              <li>이 AudioBufferSourceNode의 내부 슬롯 [[source started]]을 true로 설정합니다.</li>
+              <li>이 AudioBufferSourceNode를 시작시키기 위해서, 메시지 내의 파라미터 값들을 포함해, 컨트롤 메시지를 queue합니다.</li>
+              <li>만약 버퍼가 설정되어 있다면 버퍼의 컨텐츠를 획득합니다.</li>
+              <li>오직 아래의 모든 조건들이 만족되었을 때만 연관된 AudioContext에 컨트롤 메시지를 보내 이 AudioContext의 렌더링 스레드의 실행을 시작합니다.
+                <ol>
+                  <li>컨텍스트의 [[control thread state]]가 suspended입니다.</li>
+                  <li>컨텍스트가 시작되도록 허용되었습니다.</li>
+                  <li>[[suspended by user]] 플래그가 false입니다.</li>
+                </ol>
+                <br>
+                <div class="note">
+                  <p>이것은 start()가 start()가 호출되지 않았다면 시작되도록 허용되지 않았을 AudioContext를 시작하도록 허용합니다.</p>
+                </div>
+              </li>
+            </ol>
+          </dd>
+          <br>
+          <dd>컨트롤 메시지를 실행해 AudioBufferSourceNode를 시작시킨다는 것은 다음의 재생 알고리즘의 handleStart()를 호출한다는 것을 의미합니다.</dd>
+          <br>
         </dl>
         <br>
         <h3>1.9.4. AudioBufferSourceOptions</h3>
