--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3140,6 +3140,20 @@ interface AudioBufferSourceNode : AudioScheduledSourceNode {
         </dl>
         <br>
         <h3>1.9.4. AudioBufferSourceOptions</h3>
+        <br>
+        <p>이것은 AudioBufferSourceNode를 생성하는 옵션을 명시합니다. 모든 멤버는 선택적입니다. 만약 명시되지 않는다면, 일반적인 기본값이 이 노드를 생성하는 데 사용됩니다.</p>
+        <br>
+        <pre>
+dictionary AudioBufferSourceOptions {
+  AudioBuffer? buffer;
+  float detune = 0;
+  boolean loop = false;
+  double loopEnd = 0;
+  double loopStart = 0;
+  float playbackRate = 1;
+};
+        </pre>
+        <br>
         <h4>1.9.4.1. 딕셔너리 AudioBufferSourceOptions 멤버</h4>
         <h3>1.9.5. 반복</h3>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
