--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3155,6 +3155,12 @@ dictionary AudioBufferSourceOptions {
         </pre>
         <br>
         <h4>1.9.4.1. 딕셔너리 AudioBufferSourceOptions 멤버</h4>
+        <br>
+        <dl>
+          <dt><i>buffer</i> / 자료형: AudioBuffer / nullable</dt>
+          <dd>재생될 오디오 에셋. 이것은 AudioBufferSourceNode의 buffer 어트리뷰트에 버퍼를 할당하는 것과 동일합니다.</dd>
+        </dl>
+        <br>
         <h3>1.9.5. 반복</h3>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
         <br>
