--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3159,6 +3159,9 @@ dictionary AudioBufferSourceOptions {
         <dl>
           <dt><i>buffer</i> / 자료형: AudioBuffer / nullable</dt>
           <dd>재생될 오디오 에셋. 이것은 AudioBufferSourceNode의 buffer 어트리뷰트에 버퍼를 할당하는 것과 동일합니다.</dd>
+          <br>
+          <dt><i>detune</i> / 자료형: float / 기본값: 0</dt>
+          <dd>detune AudioParam의 초기값.</dd>
         </dl>
         <br>
         <h3>1.9.5. 반복</h3>
