--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3162,6 +3162,9 @@ dictionary AudioBufferSourceOptions {
           <br>
           <dt><i>detune</i> / 자료형: float / 기본값: 0</dt>
           <dd>detune AudioParam의 초기값.</dd>
+          <br>
+          <dt><i>loop</i> / 자료형: boolean / 기본값: false</dt>
+          <dd>loop 어트리뷰트의 초기값.</dd>
         </dl>
         <br>
         <h3>1.9.5. 반복</h3>
