--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3168,6 +3168,9 @@ dictionary AudioBufferSourceOptions {
           <br>
           <dt><i>loopEnd</i> / 자료형: double / 기본값: 0</dt>
           <dd>loopEnd 어트리뷰트의 초기값.</dd>
+          <br>
+          <dt><i>loopStart</i> / 자료형: double / 기본값: 0</dt>
+          <dd>loopStart 어트리뷰트의 초기값.</dd>
         </dl>
         <br>
         <h3>1.9.5. 반복</h3>
